[package]
name = "ssh-tailscale"
version = "0.1.0"
edition = "2024"
authors = ["John Detter <no-reply@boppygames.gg>"]
description = "A CLI utility for easily connecting to your Tailscale nodes via SSH"
license = "Apache-2.0"

[dependencies]
fuzzy-matcher = "0.3.7"
regex = "1.10.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.7"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ratatui = "0.26.0"
crossterm = "0.27.0"
